tests/rosetta/out/C/99-bottles-of-beer-2.error
cc: exit status 1
/tmp/99-bottles-of-beer-2.c: In function ‘numberName’:
/tmp/99-bottles-of-beer-2.c:139:13: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  139 |     int t = tens.data[(int)((((double)n) / ((double)10)))];
      |             ^~~~
/tmp/99-bottles-of-beer-2.c:142:19: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  142 |       t = t + " " + small.data[s];
      |           ~~~~~~~ ^ ~~~~~~~~~~~~~
      |             |                 |
      |             char *            char *
/tmp/99-bottles-of-beer-2.c:144:12: warning: returning ‘int’ from a function with return type ‘char *’ makes pointer from integer without a cast [-Wint-conversion]
  144 |     return t;
      |            ^
